Fixed alignment and times

--- a/css/style.less
+++ b/css/style.less
@@ -2653,7 +2653,7 @@ fieldset[disabled] .btn.ribbon.active {
 		position:relative;
 		margin:0 auto 35px;
 		text-align:center;
-		width:260px;
+		width:347px;
 		border:2px solid fade(#fff, 50%);
 		.border-radius(4px);
 	
@@ -2742,7 +2742,7 @@ fieldset[disabled] .btn.ribbon.active {
 	li{
 		position:relative;
 		min-height:420px;
-		width:31.3333%;
+		width:46.9999%;
 		display:inline-block;
 		float:left;
 		text-align:center;
